# lane-binary-classifier

./: .gitignore  README.md  README_zh.md  SUBMISSION.md  pyproject.toml  requirements.txt
configs/: baseline.json
docs/: dataset_preparation.md  experiment_plan.md  github_upload.md  model_design.md  智能驾驶车道二分类PPT设计文档.pptx  智能驾驶车道二分类实验报告.docx
scripts/: make_experiment_report_docx.py  make_ppt_design_doc.py  make_report_assets.py  make_toy_dataset.py  prepare_tusimple_binary.py
src/lane_binary_classifier/: __init__.py  data.py  evaluate.py  export_onnx.py  metrics.py  model.py  predict.py  predict_onnx.py  train.py
tests/: test_project_files.py
