[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lane-binary-classifier"
version = "0.1.0"
description = "A lightweight lane in/out binary classifier for autonomous driving perception coursework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "pillow>=10.0",
  "tqdm>=4.66",
  "tensorboard>=2.15",
  "onnx>=1.16",
  "onnxruntime>=1.17",
]

[project.optional-dependencies]
docs = [
  "python-docx>=1.1",
  "python-pptx>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
